force-app/main/default/objects/Carrier_Addon_Junction__c/Carrier_Addon_Junction__c.object-meta.xml
<CustomObject>
    <label>Carrier Addon Junction</label>
    <nameField>
        <displayFormat>CAJ-{000}</displayFormat>
        <label>Carrier Addon Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carrier Addon Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>