force-app/main/default/objects/Carrier_Addon_Junction__c/fields/AE_SB__c.field-meta.xml
<CustomField>
    <fullName>AE_SB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE/SB</label>
    <referenceTo>AE_SB__c</referenceTo>
    <relationshipLabel>Carrier Addon Junctions</relationshipLabel>
    <relationshipName>Carrier_Addon_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>