force-app/main/default/objects/Carrier_Addon_Junction__c/fields/airline_upgrade__c.field-meta.xml
<CustomField>
    <fullName>airline_upgrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>airline upgrade</label>
    <referenceTo>airline_upgrade__c</referenceTo>
    <relationshipLabel>Carrier Addon Junctions</relationshipLabel>
    <relationshipName>Carrier_Addon_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>