force-app/main/default/objects/Carrier_Addon_Junction__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Carrier Addon Junctions</relationshipLabel>
    <relationshipName>Carrier_Addon_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>