force-app/main/default/objects/Carrier_Addon_Junction__c/fields/Carrier_Addon_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Addon_Name__c</fullName>
    <formula>IF(   NOT( ISBLANK( AE_SB__r.Name ) )   , &apos;Carrier &apos;+  TEXT(Carrier__r.Carrier_Group__c)  +&apos; - &apos;+    AE_SB__r.Name ,  IF(NOT( ISBLANK( sub_stopover__r.Name ) ), &apos;Carrier &apos;+  TEXT(Carrier__r.Carrier_Group__c)  +&apos; - &apos;+    sub_stopover__r.Name , &apos;Carrier &apos;+  TEXT(Carrier__r.Carrier_Group__c)  +&apos; - &apos;+      airline_upgrade__r.Name  ) )</formula>
    <label>Carrier Addon Name</label>
    <type>Text</type>
</CustomField>