force-app/main/default/objects/Carrier_Addon_Junction__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Carrier Addon Junctions</relationshipLabel>
    <relationshipName>Carrier_Addon_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>