force-app/main/default/objects/Carrier_Addon_Junction__c/fields/sub_stopover__c.field-meta.xml
<CustomField>
    <fullName>sub_stopover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>sub stopover</label>
    <referenceTo>sub_stopover__c</referenceTo>
    <relationshipLabel>Carrier Addon Junctions</relationshipLabel>
    <relationshipName>Carrier_Addon_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>